Fix Icon on tab. Fixed alignment on Skills. Added a 'see more' button on Skills, with a fade in and out animation.

--- a/twilight/src/assets/main.css
+++ b/twilight/src/assets/main.css
@@ -13,7 +13,7 @@ body{
 }
 
 h1 {
-  font-size: 5vh;
+  font-size: 4vh;
 }
 
 h2 {
